[tool.poetry]
name = "electrum"
version = "0.1.0"
description = ""
authors = ["Thomas Voegtlin"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5"
pytest = "^5.4"
pytest-cov = "^2.10"
pytest-xdist = "^1.33"
pytest-random-order = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
